# RobSharper.Ros.MessageEssentials

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  RobSharper.Ros.MessageEssentials.sln  RosMessageParserCli.sln
Joanneum.Robotics.Ros.MessageBase/: AttributeBasedRosMessageDescriptorFactory.cs  IMessageTypeInfo.cs  Joanneum.Robotics.Ros.MessageBase.csproj  MessageTypeInfo.cs  MessageTypeRegistry.cs  RosMessageAttribute.cs  RosMessageConstantDescriptor.cs  RosMessageDescriptor.cs  RosMessageDescriptorBuilder.cs  RosMessageDescriptorFactory.cs  RosMessageFieldAttribute.cs  RosMessageFieldDescriptor.cs  RosMessageFieldDescriptorAttribute.cs  RosMessageSerializer.cs  RosMessageTypeAttribute.cs  RosMessageTypeDescriptorAttribute.cs  RosMessageTypeInfo.cs  RosType.cs  RosType.g4  SimpleHashCode.cs
Joanneum.Robotics.Ros.MessageBase.Tests/: Joanneum.Robotics.Ros.MessageBase.Tests.csproj  MessageInfoTests.cs  MessageTypeInfoTests.cs  MessageTypeRegistryTests.cs  RosMessageDescriptorFactoryTests.cs  SerializationTests.cs
Joanneum.Robotics.Ros.MessageParser.Cli.Tests/: CodeGenerationContextTests.cs  IRosMessagePackageParserTests.cs  Joanneum.Robotics.Ros.MessageParser.Cli.Tests.csproj  PackageRegistryMessageParserAdapterTests.cs  RosMessagePackageGeneratorTests.cs  RosMessagePackageParserTests.cs  RosPackageInfoTests.cs  TestUtils.cs
Joanneum.Robotics.Ros.MessageParser.Cli.Tests/TestPackages/circular_msgs/circular_msgs/: package.xml
Joanneum.Robotics.Ros.PackageXml.Tests/: Joanneum.Robotics.Ros.PackageXml.Tests.csproj  PackageXmlDeserializationTests.cs
(+332 files in other folders)
