<package>
  <name>circular_msgs</name>
  <version>1.0.0</version>
  <description>
    circular_msgs is a test message package containing circular dependencies
  </description>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>a_msgs</run_depend>
  <run_depend>b_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
